<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:id="@id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/app_title"
            android:textColor="@color/colorAccent"
            android:textSize="27sp"
            android:textStyle="italic"
            android:typeface="serif" />

            <android.support.design.widget.TextInputLayout
                android:id="@id/login_email_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="60dp">

                <EditText
                    android:id="@id/email_editText_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="15dp"
                    android:textSize="20sp"
                    android:drawableStart="@drawable/ic_email_white_24dp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_email_white_24dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@id/login_password_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                >

                <EditText
                    android:id="@id/password_editText_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock_outline_white_24dp"
                    android:drawablePadding="15dp"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:drawableLeft="@drawable/ic_lock_outline_white_24dp" />
            </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@id/signIn_button_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/sign_in"
            android:textColor="#FFFF" />

        <TextView
            android:id="@id/signUp_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/sign_up_login"
            android:textColor="#FFFF"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>