<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <include
        android:id="@id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:id="@id/register_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@id/register_username_inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <EditText
                android:id="@id/username_editText_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/ic_perm_identity_white_24dp"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@id/register_email_inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <EditText
                android:id="@id/email_editText_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/ic_email_white_24dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="#FFFF"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@id/register_password_inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <EditText
                android:id="@id/password_editText_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/ic_lock_outline_white_24dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#FFFF"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@id/signUp_button_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/sign_up_register"
            android:textColor="#FFFF" />

    </LinearLayout>
</LinearLayout>